prod/monitoring/kube-prom-stack/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ui-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: grafana-certificate-secret
